cargo-features = []

[package]
name = "krust-raspberry-os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
default = ["bsp_rpi3ap"]
bsp_rpi3 = []
bsp_rpi4 = []
bsp_rpi3ap = []


[[bin]]
name = "kernel"
path = "src/main.rs"

[target.'cfg(target_arch = "aarch64")'.dependencies]
cortex-a = { version = "7.x.x" }
