cargo-features = []

[package]
name = "krust-raspberry-os"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kernel"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["bsp_rpi3"]
bsp_rpi3 = ["tock-registers"]
bsp_rpi4 = ["tock-registers"]
bsp_rpi3ap = ["tock-registers"]

[dependencies]
tock-registers = { version = "0.7.x", default-features = false, features = ["register_types"], optional = true }


[target.'cfg(target_arch = "aarch64")'.dependencies]
cortex-a = { version = "7.x.x" }
